Restructured tests in Gradle build